css/styles.css
body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #ffffff;
  letter-spacing: 0.02em;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  padding: 0;
}

p {
  line-height: 1.5;
  font-weight: 400;
  font-size: 16px;
}

a {
  color: #2e2f42;
  margin: 0;
  padding: 0;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

h2,
h3 {
  color: #2e2f42;
}

h2 {
  font-size: 36px;
  font-weight: 700;
  letter-spacing: 0.02em;
  line-height: 1.11;
}

h3 {
  font-size: 20px;
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.2;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.container {
  max-width: 1158px;
  margin: 0 auto;
  padding: 0 15px;
}

.section {
  padding: 120px 0;
}

.icon {
  height: 64px;
  fill: none;
}

/* __________HEADER__________ */

.logo {
  text-decoration: none;
  font-family: "Raleway", sans-serif;
  text-transform: uppercase;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.16;
  letter-spacing: 0.03em;
  margin-right: 76px;
}

.accent {
  color: #4d5ae5;
}

.menu {
  display: flex;
  align-items: center;
}

.menu ul {
  display: flex;
  gap: 40px;
}

header {
  border-bottom: 1px solid #e7e9fc;
}

header a {
  padding: 24px 0;
  display: block;
}

.nav-link a {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-decoration: none;
  position: relative;
  transition-property: color;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.nav-link a:hover,
.nav-link a:focus {
  color: #404bbf;
}

.nav-studio:active::after {
  position: absolute;
  width: 100%;
  height: 4px;
  left: 0;
  bottom: 0;
  background-color: #404bbf;
  border-radius: 2px;
  content: "";
}

address {
  line-height: 1.5;
  margin-left: auto;
}

.address-list-link {
  color: #434455;
  font-weight: 400;
  font-size: 16px;
  font-style: normal;
  letter-spacing: 0.02em;
  text-decoration: none;
  transition-property: color;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.address-list-link:hover,
.address-list-link:focus {
  color: #404bbf;
}

/* __________HERO__________ */

.main-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 188px 0;
}

.main {
  background-color: #2e2f42;
  background-image: linear-gradient(
      to bottom,
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url(../images/background.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.main-title {
  color: #ffffff;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  font-weight: 700;
  text-align: center;
  margin-bottom: 48px;
  width: 496px;
}

.main-title-button {
  background-color: #4d5ae5;
  color: #ffffff;
  letter-spacing: 0.04em;
  line-height: 1.5;
  font-weight: 500;
  cursor: pointer;
  border: none;
  border-radius: 4px;
  padding: 16px 32px;
  transition-property: background-color;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.main-title-button:hover,
.main-title-button:focus {
  background-color: #404bbf;
}

/* ___________FEATURES___________ */

.features {
  display: flex;
  gap: 24px;
}

.features h3 {
  margin-bottom: 8px;
}

.features li {
  width: calc((100% - 72px) / 4);
}

.features-icon {
  display: flex;
  justify-content: center;
  background-color: #f4f4fd;
  border: 1px solid #8e8f99;
  border-radius: 4px;
  padding: 24px;
  margin-bottom: 8px;
}

/* __________TEAM__________ */

.team {
  background-color: #f4f4fd;
}

.team-title {
  text-align: center;
  margin-bottom: 72px;
}

.team li:not(.icon-list) {
  background-color: #ffffff;
  border-radius: 0 0 4px 4px;
}

.team h3,
.team p {
  text-align: center;
}

.team h3 {
  margin-bottom: 8px;
}

.team-box {
  padding: 32px 16px;
}

.team-list {
  display: flex;
  gap: 24px;
}

.team-list li {
  width: calc((100% - 72px) / 4);
}

.icon-list .icon {
  width: 16px;
  height: 16px;
}

.icon-list {
  transition-property: background-color;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.icon-list:hover,
.icon-list:active {
  background-color: #404bbf;
}

.team-box ul {
  display: flex;
  gap: 24px;
  margin-top: 8px;
}

.icon-list {
  display: flex;
  justify-content: center;
  padding: 12px;
  border-radius: 50%;
  background-color: #4d5ae5;
}

/* __________PORTFOLIO__________ */

.portfolio h2 {
  text-align: center;
  margin-bottom: 72px;
}

.portfolio-list {
  display: flex;
  row-gap: 48px;
  column-gap: 24px;
  flex-wrap: wrap;
}

.portfolio-item-list {
  width: calc((100% - 48px) / 3);
  transition-property: box-shadow;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-item-list:hover {
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.portfolio-item-list h3 {
  margin-bottom: 8px;
}

.portfolio-box {
  padding: 32px 16px;
  border: 1px solid #e7e9fc;
  border-top: none;
}

.portfolio-parent {
  position: relative;
  overflow: hidden;
}

.portfolio-hover {
  position: absolute;
  top: 0;
  left: 0;
  background-color: #4d5ae5;
  padding: 40px 32px;
  height: 100%;
  transform: translateY(100%);
  transition-property: transform;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-item-list:nth-child(2):hover .portfolio-hover {
  transform: translateY(0);
}

.portfolio-hover p {
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
}

/* __________FOOTER__________ */

footer {
  color: #f4f4fd;
  background-color: #2e2f42;
  padding: 100px 0;
}

.footer-box {
  display: flex;
}

.studio {
  color: #f4f4fd;
}

.footer-text {
  width: 264px;
  margin-right: 120px;
}

.footer-text .logo {
  display: block;
  margin-bottom: 16px;
}

.footer-icon {
  display: flex;
  flex-direction: column;
  width: 208px;
}

.footer-icon p {
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

.footer-icon ul {
  display: flex;
  gap: 16px;
  margin-top: 16px;
}

.footer-icon .icon-list {
  transition-property: background-color;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-icon .icon-list:hover,
.footer-icon .icon-list:active {
  background-color: #31d0aa;
}

